# text-to-sql-ai-agent

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
.claude/skills/openai-api-python/: SKILL.md
.github/workflows/: keep-alive.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py  sql_guard.py
backend/app/llm/: client.py  tools.py
backend/app/models/: __init__.py  chat.py
backend/app/repositories/: __init__.py  schema.py  sql_repository.py
backend/app/routes/: chat.py
backend/app/services/: text_to_sql.py
backend/db/: README.md  sanity_checks.sql
backend/db/migrations/: env.py  script.py.mako
backend/db/migrations/versions/: 20260626_9d6812661c65_baseline.py  20260626_b7e21d4f9a36_work_orders_output.py  20260626_c4f80a1e6b29_downtime_events.py  20260626_d9b3f57c0a14_quality_inspections_defects.py  20260626_e1a4c8d70f53_indexes.py  20260626_f3a91c7b2e84_catalog_tables.py  20260628_a2f5c9e30b18_readonly_role.py  20260701_b3e6f1a9c72d_pgvector_downtime_notes.py  20260701_c4004287e324_downtime_embedding_column.py
backend/db/seed/: embed_notes.py  seed.py
backend/eval/: README.md  comparison.py  harness.py  questions.json
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/chat/: about-dialog.tsx  chat-message.tsx  markdown-content.tsx  result-table.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: types.ts
