[project]
name = "backend"
version = "0.1.0"
description = "Agentic text-to-SQL AI service over a manufacturing database (FastAPI)."
authors = [{ name = "H.Huseyin Sahin", email = "huseyin.sahin.3321@gmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = ["fastapi (>=0.138.1,<0.139.0)", "uvicorn[standard] (>=0.49.0,<0.50.0)", "pydantic-settings (>=2.14.2,<3.0.0)", "asyncpg (>=0.31.0,<0.32.0)", "openai (>=2.44.0,<3.0.0)"]

[tool.poetry]
package-mode = false

[tool.poe]
# Load .env so tasks can reference vars (e.g. ${PROD_DATABASE_URL}). pydantic
# still reads .env too; OS env set by poe wins over the .env file, which is how
# the *-prod override below redirects the target.
envfile = ".env"

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload"
seed = "python -m db.seed.seed"
migrate = "alembic upgrade head"
downgrade = "alembic downgrade -1"
eval = "python -m eval.harness"
eval-regrade = "python -m eval.harness --regrade"

# Run migrations against PRODUCTION (Supabase), opt-in only. Overrides
# DATABASE_URL from PROD_DATABASE_URL for this task alone, so `migrate`/`seed`
# stay safely local. The banner makes the target impossible to miss.
[tool.poe.tasks.migrate-prod]
sequence = [
  { cmd = "python -c \"import os,urllib.parse as u; print('>>> Alembic target = PRODUCTION:', u.urlparse(os.environ['DATABASE_URL']).hostname, '- Ctrl+C now to abort.')\"" },
  { cmd = "alembic upgrade head" },
]
env = { DATABASE_URL = "${PROD_DATABASE_URL}" }

[dependency-groups]
dev = [
    "poethepoet (>=0.46.0,<0.47.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]
