[project]
name = "backend"
version = "0.1.0"
description = "Agentic text-to-SQL AI service over a manufacturing database (FastAPI)."
authors = [{ name = "H.Huseyin Sahin", email = "huseyin.sahin.3321@gmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = ["fastapi (>=0.138.1,<0.139.0)", "uvicorn[standard] (>=0.49.0,<0.50.0)", "pydantic-settings (>=2.14.2,<3.0.0)", "asyncpg (>=0.31.0,<0.32.0)", "openai (>=2.44.0,<3.0.0)"]

[tool.poetry]
package-mode = false

[tool.poe]
# Load .env so tasks can reference vars (e.g. ${PROD_DATABASE_URL}). pydantic
# still reads .env too; OS env set by poe wins over the .env file, which is how
# the *-prod override below redirects the target.
envfile = ".env"

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload"
seed = "python -m db.seed.seed"
embed = "python -m db.seed.embed_notes"
migrate = "alembic upgrade head"
downgrade = "alembic downgrade -1"
eval = "python -m eval.harness"
eval-regrade = "python -m eval.harness --regrade"

# Run migrations against PRODUCTION (Supabase), opt-in only. Overrides
# DATABASE_URL from PROD_DATABASE_URL for this task alone, so `migrate`/`seed`
# stay safely local. The banner makes the target impossible to miss.
[tool.poe.tasks.migrate-prod]
sequence = [
  { cmd = "python -c \"import os,urllib.parse as u; print('>>> Alembic target = PRODUCTION:', u.urlparse(os.environ['DATABASE_URL']).hostname, '- Ctrl+C now to abort.')\"" },
  { cmd = "alembic upgrade head" },
]
env = { DATABASE_URL = "${PROD_DATABASE_URL}" }

# Re-seed PRODUCTION (Supabase). DESTRUCTIVE: the seed wipes and regenerates every
# table, so this replaces all prod data. Needed once to populate the free-text notes
# added after prod was first seeded. Same env override as migrate-prod; the banner
# pauses 5s so a mistaken run can be aborted.
[tool.poe.tasks.seed-prod]
sequence = [
  { cmd = "python -c \"import os,time,urllib.parse as u; print('>>> SEED will WIPE and regenerate ALL data on PRODUCTION:', u.urlparse(os.environ['DATABASE_URL']).hostname); print('>>> Ctrl+C within 5s to abort.'); time.sleep(5)\"" },
  { cmd = "python -m db.seed.seed" },
]
env = { DATABASE_URL = "${PROD_DATABASE_URL}" }

# Embed the downtime notes on PRODUCTION. Idempotent (only rows missing an embedding
# are processed), so it's safe to re-run. Run after migrate-prod + seed-prod.
[tool.poe.tasks.embed-prod]
sequence = [
  { cmd = "python -c \"import os,urllib.parse as u; print('>>> Embedding notes on PRODUCTION:', u.urlparse(os.environ['DATABASE_URL']).hostname, '- Ctrl+C now to abort.')\"" },
  { cmd = "python -m db.seed.embed_notes" },
]
env = { DATABASE_URL = "${PROD_DATABASE_URL}" }

[dependency-groups]
dev = [
    "poethepoet (>=0.46.0,<0.47.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]
